--- a/src/renderer/styles/tabs.css
+++ b/src/renderer/styles/tabs.css
@@ -1,9 +1,8 @@
 /* --- Tab Bar --- */
 #tab-bar-wrapper {
-    flex-grow: 1;
-    flex-shrink: 1;
+    flex: 1 1 auto; /* Default to growing and shrinking */
     min-width: 50px;
-    transition: flex-grow 200ms ease-in-out, opacity 200ms ease-in-out, min-width 200ms ease-in-out, flex-basis 200ms ease-in-out;
+    transition: flex 200ms ease-in-out, min-width 200ms ease-in-out;
     overflow: hidden;
     background-color: var(--bg-tab-bar);
 }
