--- a/src/renderer/styles/chrome.css
+++ b/src/renderer/styles/chrome.css
@@ -106,5 +106,6 @@
     flex: 0 0 0px;
     min-width: 0;
     opacity: 0;
-    pointer-events: none;
+    visibility: hidden;
+    transition: flex 200ms ease-in-out, min-width 200ms ease-in-out, opacity 200ms ease-in-out, visibility 0s linear 200ms;
 }
