--- a/src/renderer/styles/tabs.css
+++ b/src/renderer/styles/tabs.css
@@ -2,9 +2,10 @@
 #tab-bar-wrapper {
     flex: 1 1 auto; /* Default to growing and shrinking */
     min-width: 50px;
-    transition: flex 200ms ease-in-out, min-width 200ms ease-in-out, opacity 200ms ease-in-out;
     overflow: hidden;
     background-color: var(--bg-tab-bar);
+    visibility: visible;
+    transition: flex 200ms ease-in-out, min-width 200ms ease-in-out, opacity 200ms ease-in-out, visibility 0s;
 }
 #tab-bar { display: flex; align-items: center; height: 100%; width: 100%; -webkit-app-region: no-drag; }
 #tabs-container-wrapper {
